[package]
name = "debversion"
version = "0.3.1"
edition = "2021"
authors = [ "Jelmer Vernooĳ <jelmer@debian.org>",]
license = "Apache-2.0"
description = "Debian version parsing, manipulation and comparison"
repository = "https://github.com/jelmer/debversion-rs"
documentation = "https://docs.rs/debversion"
keywords = ["debian", "version"]
homepage = "https://github.com/jelmer/debversion-rs"

[features]
default = []
sqlx = [ "sqlx/postgres",]
python-debian = [ "dep:pyo3",]
serde = [ "dep:serde",]

[dependencies]
lazy-regex = "3"

[dependencies.pyo3]
version = ">=0.20"
optional = true

[dependencies.sqlx]
version = "0.7"
optional = true
default-features = false
features = [ "postgres",]

[dependencies.serde]
version = "1"
optional = true

[dev-dependencies.sqlx]
version = "0.7"
default-features = false
features = [ "runtime-async-std-native-tls",]

[dev-dependencies.pyo3]
version = ">=0.20"
features = [ "auto-initialize",]
