[package]
name = "debversion"
version = "0.4.7"
edition = "2021"
authors = [ "Jelmer Vernooĳ <jelmer@debian.org>",]
license = "Apache-2.0"
description = "Debian version parsing, manipulation and comparison"
repository = "https://github.com/jelmer/debversion-rs"
documentation = "https://docs.rs/debversion"
keywords = ["debian", "version", "dpkg"]
homepage = "https://github.com/jelmer/debversion-rs"
categories = ["parser-implementations"]

[features]
default = []
sqlx = [ "sqlx/postgres",]
python-debian = [ "dep:pyo3",]
serde = [ "dep:serde",]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
lazy-regex = "3"
num-bigint = "0.4.6"

[dependencies.pyo3]
version = ">=0.24, <0.27"
optional = true

[dependencies.sqlx]
version = "0.8.2"
optional = true
default-features = false
features = [ "postgres",]

[dependencies.serde]
version = "^1"
optional = true

[dev-dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [ "runtime-async-std-rustls",]

[dev-dependencies.openssl]
version = "0.10.64"

[dev-dependencies.openssl-sys]
version = "0.9.100"

[dev-dependencies.pyo3]
version = ">=0.24, <0.26"
features = [ "auto-initialize",]
